# Sigil-Protocol

./: .dockerignore  .gitignore  Anchor.toml  BUILD_ENVIRONMENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.deploy  IMPLEMENTATION_PLAN_MCP.md  README.md  ROADMAP.md  TESTING.md  build.sh  deploy-devnet.sh  deploy.sh  docker-compose.yml  docker-deploy.sh  manual-deploy.sh  package-lock.json  package.json  trigger.txt  tsconfig.json
.agent/workflows/: deploy-sigil.md
backend/: .env.example  package-lock.json  package.json  tsconfig.json  wrangler.toml
backend/src/: index.ts  server.ts
docs/: ARCHITECTURE.md  ROADMAP-DOCS.md  SDK.md
frontend/: .gitignore  README_UI.md  next.config.js  package-lock.json  package.json  tailwind.config.js  wrangler.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ExecutionFeed.tsx  MintSkillModal.tsx  MintSkillSidebar.tsx  Nav.tsx  NetworkActivityFeed.tsx  SkillCard.tsx  (+1 more)
programs/: sigil-registry-keypair.json
programs/sigil-registry/: Cargo.toml
programs/sigil-registry/src/: lib.rs  state.rs
programs/sigil-registry/src/instructions/: add_signature.rs  initialize_auditor.rs  initialize_registry.rs  log_execution.rs  mint_skill.rs  mod.rs  record_consensus.rs  request_unstake.rs  slash_auditor.rs  stake_usdc.rs  withdraw_stake.rs
scripts/: mint-reference-skills.ts  quick-test.ts
sdk/: README.md  package.json  tsconfig.json
skills/: ArbitrageScout.md  AuditorProtocol.md  SigilProtocolPresentation.md  SkillExecutor.md  SkillRegistry.md  SolanaDepthAnalyzer.md  StakingVault.md  TrustScorer.md
(+49 files in other folders)
