[package]
name = "sigil_registry"
version = "0.1.0"
description = "Sigil Protocol - Trust Layer for AI Agent Skills"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sigil_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
blake3 = "=1.5.5"
